--- a/src/components/TableTransactions/styles.css
+++ b/src/components/TableTransactions/styles.css
@@ -11,3 +11,44 @@
         display: block;
     }
 }
+
+/* Checkbox customizado: fundo laranja e check branco */
+.checkbox-orange {
+  position: relative;
+  width: 1.25rem;
+  height: 1.25rem;
+  display: inline-block;
+}
+.checkbox-orange input[type="checkbox"] {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  cursor: pointer;
+  z-index: 2;
+}
+.checkbox-orange .custom-check {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  border: 2px solid #B1B1B1;
+  border-radius: 0.25rem;
+  transition: background 0.2s, border-color 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+.checkbox-orange input[type="checkbox"]:checked + .custom-check {
+  background: #FF7E1D;
+  border-color: #FF7E1D;
+}
+.checkbox-orange .custom-check svg {
+  display: none;
+}
+.checkbox-orange input[type="checkbox"]:checked + .custom-check svg {
+  display: block;
+}
